deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: helpme-green
  labels:
    app.kubernetes.io/part-of: helpme-green
    app.kubernetes.io/managed-by: kustomize
